# Roboflow-MCP-Server

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  tool_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: ARCHITECTURE.md  CI_PINS.md  HARDENING.md  INSTALL.md  RELEASING.md  SECURITY_MODEL.md  TOOLS.md
examples/: curate_dataset.py  export_and_train_prep.py  upload_and_annotate.py
src/roboflow_mcp/: __init__.py  audit.py  client.py  config.py  errors.py  guards.py  logging.py  server.py
src/roboflow_mcp/models/: __init__.py  annotation.py  image.py  io.py  upload.py  version.py  workspace.py
src/roboflow_mcp/resources/: __init__.py  version.py
src/roboflow_mcp/safety/: __init__.py  imageguard.py  paths.py  sanitize.py  urlguard.py
src/roboflow_mcp/tools/: __init__.py  _common.py  annotation.py  download.py  image.py  project.py  upload.py  version.py  workspace.py
tests/: conftest.py
tests/redteam/: test_malformed_images.py  test_path_traversal.py  test_prompt_injection.py  test_ssrf_corpus.py
tests/unit/: test_audit.py  test_client.py  test_config.py  test_errors.py  test_guards.py  test_logging.py  test_package.py  test_sanitize.py  test_server.py
tests/unit/safety/: test_imageguard.py  test_paths.py  test_urlguard.py
tests/unit/tools/: test_annotation.py  test_download.py  test_image.py  test_project.py  test_upload.py  test_version.py  test_workspace.py
