[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-server-roboflow"
version = "0.2.0"
description = "Hardened MCP server for the Roboflow API: capability scopes, audit log, dry-run, strict TLS, Sigstore-signed releases."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
  { name = "Mayank Deshpande", email = "deshpandemayank5@gmail.com" },
]
keywords = ["mcp", "roboflow", "claude", "llm", "computer-vision", "dataset"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "mcp[cli]>=1.2.0",
  "httpx>=0.27",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "tenacity>=9.0",
  "anyio>=4.4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "pytest-cov>=5.0",
  "respx>=0.21",
  "vcrpy>=6.0",
  "ruff>=0.6",
  "mypy>=1.11",
  "pre-commit>=3.8",
  "types-requests",
  "bandit>=1.7",
  "pip-audit>=2.7",
]

[project.urls]
Homepage = "https://github.com/MayankD409/Roboflow-MCP-Server"
Issues = "https://github.com/MayankD409/Roboflow-MCP-Server/issues"
Changelog = "https://github.com/MayankD409/Roboflow-MCP-Server/blob/main/CHANGELOG.md"

[project.scripts]
mcp-server-roboflow = "roboflow_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/roboflow_mcp"]

[tool.hatch.build.targets.sdist]
include = [
  "src/roboflow_mcp",
  "README.md",
  "LICENSE",
  "NOTICE",
  "CHANGELOG.md",
]

# ---------- ruff ----------
[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "F",   # pyflakes
  "W",   # pycodestyle warnings
  "I",   # isort
  "B",   # flake8-bugbear
  "UP",  # pyupgrade
  "SIM", # flake8-simplify
  "RUF",
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]

[tool.ruff.format]
quote-style = "double"

# ---------- mypy ----------
[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["roboflow.*", "vcr.*"]
ignore_missing_imports = true

# ---------- pytest ----------
[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
  "contract: opt-in tests that hit the real Roboflow API",
]

# ---------- coverage ----------
[tool.coverage.run]
branch = true
source = ["src/roboflow_mcp"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

# ---------- bandit ----------
[tool.bandit]
# Scanning source only; tests legitimately use `assert` and construct secrets
# inline for fixtures. The CI job pins `-r src/` so this is belt-and-braces.
exclude_dirs = ["tests"]
# B101 (assert used), B311 (random PRNG) — not relevant for an MCP server.
skips = ["B101", "B311"]
